--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -7,6 +7,12 @@
   --foreground: #171717;
 }
 
+
+.dark {
+  --background-color: black;
+  --text-color: white;
+}
+
 @media (prefers-color-scheme: dark) {
   :root {
     --background: #0a0a0a;
@@ -15,5 +21,7 @@
 }
 
 body {
-
+  background-color: var(--background-color);
+  color: var(--text-color);
+  margin: 0;
 }
